--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "webpack": "^4.10.2",
@@ -17,7 +20,9 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest",
+    "lint": "eslint *"
   },
   "keywords": [],
   "author": "",
