--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "easy",
+  "name": "lazysearch-react-js-sample",
   "version": "1.0.0",
   "description": "test project",
-  "main": "webpack.config.js",
+  "main": "src/app.js",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -29,5 +29,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
